--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -360,3 +360,10 @@ en:
       student_support: 'NetAcad Support - Student'
       student_support_description: 'Your Instructor should be your first point of contact. They can answer your Networking Academy questions or contact the support desk for you. You can contact your instructor by using the Inbox feature.'
       support_desk_livechat: 'Support Desk Live Chat'
+  lti:
+    launches:
+      unsupported_message_type: "Canvas cannot build an LTI launch for message type %{message_type}. Verify the tool is configured for this workflow or contact your administrator."
+    asset_processor:
+      errors:
+        missing_required_permission: "You do not have permission to access this asset processor. Ask an instructor or administrator to grant Manage Grades or View All Grades."
+        report_mismatch: "The requested asset report is not associated with this processor. Refresh the page and try again."
